--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Tk-ForDummies-Graph
 
-1.01    24/03/2009 First version for CPAN.
+1.00    24/03/2009 First version for CPAN.
+
+1.01    30/03/2009 Change Read me.
 
