Import of DJIBEL/Tk-ForDummies-Graph-1.04 from CPAN.
gitpan-cpan-distribution: Tk-ForDummies-Graph
gitpan-cpan-version:      1.04
gitpan-cpan-path:         DJIBEL/Tk-ForDummies-Graph-1.04.tar.gz
gitpan-cpan-author:       DJIBEL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Tk-ForDummies-Graph
 
+1.04    01/04/2009 Fix bug installation, pod documentations and script bugs.
+
 1.03    31/03/2009 Tk::ForDummies::Graph::Areas added.
 
 1.02    30/03/2009 Tk::ForDummies::Graph::Pie updated.
