--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Tk-ForDummies-Graph
 
+1.06 13/04/2009 16:54:30
+  fix bugs in Tk-ForDummies-Graph modules (legend, ...)
+  updated Tk::ForDummies::Graph::Boxplots
+  
 1.05    11/04/2009 01:00:22 
   Tk::ForDummies::Graph::Splines added.
   Tk::ForDummies::Graph::FAQ added.
