--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Tk-ForDummies-Graph
 
+1.07 13/05/2009
+  New option -titleposition -xvalueview and -yvalueview
+  
 1.06 13/04/2009 16:54:30
   fix bugs in Tk-ForDummies-Graph modules (legend, ...)
   updated Tk::ForDummies::Graph::Boxplots
