--- a/TODO
+++ b/TODO
@@ -1,9 +1,12 @@
 #==================================================================
 # Author    : Djibril Ousmanou
 # Copyright : 2009
-# Update    : 11/04/2009 01:26:58
+# Update    : 17/07/2009 20:07:59
 # AIM       : Tk::ForDummies::Graph TODO
 #==================================================================
+
+Allow to get Q1 and Q3 quartile using one of the nine quantile algorithms in boxplot. 
+For the moment, the quantile is calculated with the same algorithm as Excel and type 7 quantile R package. 
 
 Create Tk::ForDummies::Graph::Mixed
 
